--- a/reservation.html
+++ b/reservation.html
@@ -38,23 +38,23 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+                            <a class="nav-link" aria-current="page" href="menu.html">
                                 Menu
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">
+                            <a class="nav-link" aria-current="page" href="location.html">
                                 Locations 
                             </a>
                         </li>
                         
                         <li class="nav-item">
-                          <a class="nav-link" aria-current="page" href="#">
+                          <a class="nav-link" aria-current="page" href="reservation.html">
                               Reservations 
                           </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">
+                        <a class="nav-link" aria-current="page" href="event_calander.html">
                             events 
                         </a>
                     </li>
