--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		
         <title>Menu</title>
-        <link rel="stylesheet" type="text/css" href="C:\Users\802894.SYLVANIA\Downloads\menu\style.css" />
+        <link rel="stylesheet" type="text/css" href="menuStyle.css" />
+        <link rel="stylesheet" type="text/css" href="stylesheet.css" />
     </head>
     <body>
         
