--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		
         <title>Menu</title>
-        <link rel="stylesheet" type="text/css" href="C:\Users\802894.SYLVANIA\Downloads\menu\style.css" />
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
         
@@ -27,7 +27,7 @@
         <nav class="navbar sticky-top navbar-expand-sm bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="bus_tech_media/download.png">
+                    <img src="#">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon">
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </nav>
-                
+
         <div class="fixed-bg">
             <div class="">
                 <br><br><br>
