Main Page start

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <style>
       
        .fixed-bg {
-            background-image: url("");
-            min-height: 250px;
+            background-image: url("pictures/pexels-pressmaster-3851524.jpg");
+            min-height: 390px;
             background-attachment: fixed;
             background-position: center;
             background-repeat: no-repeat;
@@ -26,11 +26,14 @@
         }
 
         #banner {
-            color: rgb(255, 255, 255);
+            color: rgb(250, 69, 9);
             position: relative;
+            text-align: center;
             top: 30px;
-            font-weight: 1000;
-            font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+            font-size: 100px;
+            font-weight: 700;
+            font-family: serif;
+            
         }
 
     </style>
@@ -121,7 +124,7 @@
     <div class="row fixed-bg container-flud">
       <div class="container w-75">
           <br><br><br>
-          <h1 id="banner"></h1> 
+          <h1 id="banner">Game Day Bar & Grill </h1> 
       </div>
   </div>
   YUP
