--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
             font-family: serif;
             
         }
+        .Test{
+            height:100px;
+            width: 100px;
+        }
+
+        .flex-container {
+  display:flexbox;
+  height:100px;
+  
+  
+  
+}
 
     </style>
 
@@ -90,7 +102,27 @@
           <h1 id="banner">Game Day Bar & Grill </h1> 
       </div>
   </div>
-  YUP
+  
+ 
+  
+
+
+  <div class="flex-container">
+    <div style="padding-top:3px;"><img class="Test"src="pictures/Side's/pexels-matheus-bertelli-3856046.jpg"></div>
+    <div>www</div>
+    <div>wwww</div>
+   
+  </div>
+
+  <div class="flex-container">
+    <div>www</div>
+    <div>www</div>
+   
+  </div>
+
+
+
+
 
     </body>
 </html>
