--- a/menu.html
+++ b/menu.html
@@ -91,7 +91,7 @@
                     <img class="card-img-top" src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/110/190/original/apps.jpg?1705000913" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Appetizers</h5>
-                        <p class="card-text">Kick of game night with our lineup of delicous apps that are sure to fuel your game</p>
+                        <p class="card-text">Kick of game night with our lineup of delicious apps that are sure to fuel your game</p>
                         <a href="#drinks-list">Appetizers</a>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                     <img class="card-img-top" src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/110/185/original/burger.jpg?1705000777" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Burgers</h5>
-                            <p class="card-text">Order one of our renound burgers, with freshly, in house, slaughtered beef</p>
+                            <p class="card-text">Order one of our renowned burgers, with freshly, in house, slaughtered beef</p>
                             <a href="#drinks-list">Burgers</a>
                         </div>
                     </div>
