--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <nav class="navbar sticky-top navbar-expand-sm bg-body-tertiary">
       <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-              <img src="bus_tech_media/download.png">
+              <img src="pictures/gdg.png">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon">
