--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ p{
       </div>
   </nav>
    
-    this is just a simple website starter
+    
     <div class="row fixed-bg container-flud">
       <div class="container w-75">
           <br><br><br>
@@ -163,7 +163,7 @@ p{
     <div class="container text-center">
         <div class="row align-items-start">
           <div class="col">
-           <p> Come Watch The Big Game's,Weather is just you or your with a group of people.You will have a great time,Eating and drink Amzaing Food and Drinks</p>
+           <p> Come Watch The Big Game's,Whether is just you or your with a group of people.You will have a great time,Eating and drink Amzaing Food and Drinks</p>
           </div>
           
           <div class="col">
