--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
-        <title>Menu</title>
+        <title>Game Day Grill</title>
         <link rel="stylesheet" type="text/css" href="menuStyle.css" />
 
     <style>
