--- a/location.html
+++ b/location.html
@@ -15,6 +15,65 @@
     <link rel="stylesheet" href="stylesheet.css">
 
     <style>
+        .fixed-bg {
+            background-image: url("pictures/pexels-pressmaster-3851524.jpg");
+            min-height: 390px;
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        #banner {
+            color: rgb(250, 69, 9);
+            position: relative;
+            text-align: center;
+            top: 30px;
+            font-size: 120px;
+            font-weight: 700;
+            font-family: serif;
+            
+        }
+        .Test{
+            height:450px;
+            width: 550px;
+            padding:10px;
+            background-color:rgb(148, 54, 37);
+        }
+
+.body{
+    background-image:url("pictures/joshua-bartell-6vvIBTvL90A-unsplash.jpg");
+}
+
+        .flex-container {
+  display:-ms-flexbox;
+  height:100px;
+  
+}
+ div{
+    color: white;
+    align-items:center;
+ }
+
+ .center {
+  margin: auto;
+  width: 50%;
+  border: 3px solid rgba(243, 250, 243, 0.911);
+  padding: 10px;
+}
+
+
+p{
+    font-size:50px;
+    background-color:rgb(41, 39, 39);
+    font-weight:500px;
+    color:rgba(230, 224, 224, 0.966);
+}
+
+.Nope{
+    color: rgba(0, 0, 0, 0.897);
+   
+}
 
     </style>
     <style>
