--- a/event_calander.html
+++ b/event_calander.html
@@ -98,7 +98,7 @@ p{
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">
+                            <a class="nav-link" aria-current="page" href="index.html">
                                 Home
                             </a>
                         </li>
@@ -119,7 +119,7 @@ p{
                           </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="event_calander.html">
+                        <a class="nav-link active" aria-current="page" href="event_calander.html">
                             events 
                         </a>
                     </li>
