--- a/location.html
+++ b/location.html
@@ -141,7 +141,7 @@ p{
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">
+                            <a class="nav-link" aria-current="page" href="index.html">
                                 Home
                             </a>
                         </li>
@@ -151,7 +151,7 @@ p{
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="location.html">
+                            <a class="nav-link active" aria-current="page" href="location.html">
                                 Locations 
                             </a>
                         </li>
