--- a/menu.html
+++ b/menu.html
@@ -42,12 +42,12 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">
+                            <a class="nav-link" aria-current="page" href="index.html">
                                 Home
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="menu.html">
+                            <a class="nav-link active" aria-current="page" href="menu.html">
                                 Menu
                             </a>
                         </li>
