--- a/reservation.html
+++ b/reservation.html
@@ -69,31 +69,64 @@ p{
      </style>   
     </head>
 <body>
-    <header id="home">
-      <nav class="navbar">
-        <h1>Eventic</h1>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#events">Events</a></li>
-            <li><a href="#add-event">New Event</a></li>
-        </ul>
-      </nav>
+    <nav class="navbar sticky-top navbar-expand-sm bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+                <img src="pictures/gdg.png">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">
+  
+                </span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html">
+                            Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="menu.html">
+                            Menu
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="location.html">
+                            Locations 
+                        </a>
+                    </li>
+                    
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="reservation.html">
+                          Reservations 
+                      </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="event_calander.html">
+                        events 
+                    </a>
+                </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
       <div class="welcome-event"></div>
     </header>
     <main>
         <section id="events">
-            <h1 class="section-title">Events</h1>
+            <h1 class="section-title">Reservations</h1>
             <div class="events-container"></div>
         </section>
         <section id="add-event">
-            <h1 class="section-title">New Event</h1>
+            <h1 class="section-title">New Reservation</h1>
             <form class="form">
                 <input type="text" id="name" placeholder="Name">
                 <input type="number" id="attendee" placeholder="Attendees">
-                <textarea id="description" cols="30" rows="10" placeholder="Description..."></textarea>
+                <textarea id="description" cols="30" rows="10" placeholder="Special requests..."></textarea>
                 <select id="status">
-                    <option value="0">Free</option>
-                    <option value="1">Paid</option>
+                    <option value="0">Personal</option>
+                    <option value="1">Company</option>
                 </select>
                 <button class="btn btn-primary">Save</button>
             </form>
